--- a/shop.html
+++ b/shop.html
@@ -27,6 +27,7 @@
     .product_card:hover  .cost{
       opacity: 1;
       transition: .2s;
+      cursor: url("https://raw.githubusercontent.com/Kovriki/impress_web/4d730d3f0cbf6022ab0e7c9f73f33e282fecef63/images/cursor_p.svg"), pointer;
 
     }
     </style>
@@ -50,24 +51,24 @@
         <div class="category_name">экспонаты</div>
         <div class="products">
           <div class="product_card gradient_h">
-            <div id="e_1" class="photo">
+            <a href="shop_items/item_dg.html"id="e_1" class="photo">
+              <div class="cost">статуэтка «Ж стекло»<br>1200р</div>
+            </a>
+          </div>
+          <div class="product_card gradient_h">
+            <a href="#" id="e_2" class="photo">
               <div class="cost">статуэтка «Е»<br>1200р</div>
-            </div>
+            </a>
           </div>
           <div class="product_card gradient_h">
-            <div id="e_2" class="photo">
-            <div class="cost">статуэтка «Е»<br>1200р</div>
-            </div>
+            <a href="#" id="e_3" class="photo">
+              <div class="cost">статуэтка «Ж»<br>1200р</div>
+            </a>
           </div>
           <div class="product_card gradient_h">
-            <div id="e_3" class="photo">
-            <div class="cost">статуэтка «Е»<br>1200р</div>
-            </div>
-          </div>
-          <div class="product_card gradient_h">
-            <div id="e_4" class="photo">
-            <div class="cost">статуэтка «Е»<br>1200р</div>
-            </div>
+            <a href="#" id="e_4" class="photo">
+              <div class="cost">статуэтка «О»<br>1200р</div>
+            </a>
           </div>
         </div>
       </div>
@@ -76,14 +77,14 @@
         <div class="category_name">одежда</div>
         <div class="products">
           <div class="product_card gradient_h">
-            <div id="s_1" class="photo">
-            <div class="cost">статуэтка «Е»<br>1200р</div>
-            </div>
+            <a href="#" id="s_1" class="photo">
+              <div class="cost">рубашка oversize<br>3000р</div>
+            </a>
           </div>
           <div class="product_card gradient_h">
-            <div id="s_2" class="photo">
-              <div class="cost">статуэтка «Е»<br>1200р</div>
-            </div>
+            <a href="#" id="s_2" class="photo">
+              <div class="cost">хранители 5к в кармане<br>800р</div>
+            </a>
           </div>
         </div>
       </div>
@@ -92,23 +93,31 @@
         <div class="category_name">аксессуары</div>
         <div class="products">
           <div class="product_card gradient_h">
-            <div id="a_1" class="photo">
-              <div class="cost">статуэтка «Е»<br>1200р</div>
+            <a href="#"id="a_1" class="photo">
+              <div class="cost">временная татуировка<br>680р</div>
+            </a>
+            <div >
             </div>
           </div>
           <div class="product_card gradient_h">
-            <div id="a_2" class="photo">
-              <div class="cost">статуэтка «Е»<br>1200р</div>
+            <a href="#"id="a_2" class="photo">
+              <div class="cost">стакачик для кофеы<br>1450р</div>
+            </a>
+            <div >
             </div>
           </div>
           <div class="product_card gradient_h">
-            <div id="a_3" class="photo">
-              <div class="cost">статуэтка «Е»<br>1200р</div>
+            <a href="#"id="a_3" class="photo">
+              <div class="cost">зонтик<br>1800р</div>
+            </a>
+            <div >
             </div>
           </div>
           <div class="product_card gradient_h">
-            <div id="a_4" class="photo">
-              <div class="cost">статуэтка «Е»<br>1200р</div>
+            <a href="#"id="a_4" class="photo">
+              <div class="cost">набор для упаковки<br>1500р</div>
+            </a>
+            <div >
             </div>
           </div>
         </div>
