--- a/shop_items/item_dg.html
+++ b/shop_items/item_dg.html
@@ -8,11 +8,14 @@
       main{
         padding-left: 8vw;
         padding-right: 8vw;
+        flex-direction: row;
+        
       }
       .item_image{
         width: 24vw;
         height: 24vw;
-        /* background-image: url('../images/i?rubashka.png'); */
+        background-image: url('../images/items_images/dg.png');
+        display: flex;
       }
     </style>
   </head>
