--- a/shop_items/item_dg.html
+++ b/shop_items/item_dg.html
@@ -6,16 +6,81 @@
     <link rel="stylesheet" href="../stylesheets/style.css">
     <style media="screen">
       main{
+        margin-top:100px;
+        margin-bottom: 100px;
         padding-left: 8vw;
         padding-right: 8vw;
+        display: flex;
         flex-direction: row;
-        
       }
       .item_image{
         width: 24vw;
         height: 24vw;
         background-image: url('../images/items_images/dg.png');
         display: flex;
+      }
+      .text_box{
+        display: flex;
+        width: 50%;
+        height:35vw;
+        /* background-color: yellow; */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+      .text_box p {
+        width: 60%;
+        text-align: left;
+        line-height: 1.2rem;
+        margin-bottom: 20px;
+      }
+      .pic_box{
+        display: flex;
+        width: 50%;
+        height:35vw;
+        background-color: gray;
+      }
+      .pic{
+        width: 100%;
+        height: 35vw;
+        background-image: url('../images/items_images/dg.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .price{
+        font-family: 'Pragmatica-Italic';
+      }
+      main div{
+        align-items: flex-start;
+      }
+      .buy_btn {
+        width: 60%;
+        height: 60px;
+        border: 1px black solid;
+        box-sizing: border-box;
+        transition: .5s all ease;
+      }
+      .buy_btn p {
+        width: 60%;
+        height: 60px;
+        /* background-color: #00FF19; */
+        justify-content: center;
+        align-items: center;
+      }
+      .buy_btn:hover {
+        background-color: #00FF19;
+        border: 1px #00FF19 solid;
+        transition: .2s all ease;
+      }
+      .inf{
+        display: flex;
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+      }
+      footer {
+        border-top: 1px solid black;
       }
     </style>
   </head>
@@ -29,6 +94,22 @@
         <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
     <main>
+      <div class="text_box">
+        <div class="inf">
+          <p>буква Ж</p>
+          <p>удобная модель с&nbspдвойными передними складками на&nbspшироких штанинах прямого покроя. Ткань — мягкий саржевый трикотаж.</p>
+          <p class="price">1200p</p>
+        </div>
+        <div class="buy_btn"><p>купить</p></div>
+      </div>
+
+      <div class="pic_box">
+        <div class="pic">
+
+        </div>
+
+      </div>
+
 
     </main>
     <footer>
