--- a/shop_items/item_dg.html
+++ b/shop_items/item_dg.html
@@ -86,12 +86,12 @@
   </head>
   <body>
     <nav>
-        <a id="s1" href="index.html"></a>
-        <a  id="s2" href="visiting.html">посещение</a>
-        <a id="s3"  href="afisha.html">афиша</a>
-        <a id="s4"  href="events.html">события</a>
-        <a id="s5"  href="shop.html">магазин</a>
-        <a id="s6"  href="museum_info.html">о музее</a>
+        <a id="s1" href="../index.html"></a>
+        <a  id="s2" href="../visiting.html">посещение</a>
+        <a id="s3"  href="../afisha.html">афиша</a>
+        <a id="s4"  href="../events.html">события</a>
+        <a id="s5"  href="../shop.html">магазин</a>
+        <a id="s6"  href="../museum_info.html">о музее</a>
     </nav>
     <main>
       <div class="text_box">
