--- a/shop_items/item_dgdg.html
+++ b/shop_items/item_dgdg.html
@@ -43,7 +43,7 @@
       .pic{
         width: 100%;
         height: 35vw;
-        background-image: url('../images/items_images/dgdg.png');
+        background-image: url('../images/items_images/dgdg../.png');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -86,12 +86,12 @@
   </head>
   <body>
     <nav>
-        <a id="s1" href="index.html"></a>
-        <a  id="s2" href="visiting.html">посещение</a>
-        <a id="s3"  href="afisha.html">афиша</a>
-        <a id="s4"  href="events.html">события</a>
-        <a id="s5"  href="shop.html">магазин</a>
-        <a id="s6"  href="museum_info.html">о музее</a>
+        <a id="s1" href="../index.html"></a>
+        <a  id="s2" href="../visiting.html">посещение</a>
+        <a id="s3"  href="../afisha.html">афиша</a>
+        <a id="s4"  href="../events.html">события</a>
+        <a id="s5"  href="../shop.html">магазин</a>
+        <a id="s6"  href="../museum_info.html">о музее</a>
     </nav>
     <main>
       <div class="text_box">
