--- a/shop.html
+++ b/shop.html
@@ -30,6 +30,9 @@
       cursor: url("https://raw.githubusercontent.com/Kovriki/impress_web/dc03f55b590552ce8b4e533f753be0febfd12843/images/cursor_p.svg"), pointer;
 
     }
+    .product_card a {
+      text-decoration: none;
+    }
     </style>
     <script type="text/javascript">
 
@@ -61,7 +64,7 @@
             </a>
           </div>
           <div class="product_card gradient_h">
-            <a href="#" id="e_3" class="photo">
+            <a href="shop_items/item_dgdg.html" id="e_3" class="photo">
               <div class="cost">статуэтка «Ж»<br>1200р</div>
             </a>
           </div>
@@ -84,6 +87,11 @@
           <div class="product_card gradient_h">
             <a href="#" id="s_2" class="photo">
               <div class="cost">хранители 5к в кармане<br>800р</div>
+            </a>
+          </div>
+          <div class="product_card gradient_h">
+            <a href="shop_items/shtani.html" id="s_3" class="photo">
+              <div class="cost">свободные штаны<br>3300р</div>
             </a>
           </div>
         </div>
