--- a/shop_items/item_dgdg.html
+++ b/shop_items/item_dgdg.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="../stylesheets/style.css">
+    <link rel="stylesheet" href="items.css">
     <style media="screen">
       main{
         margin-top:100px;
@@ -16,7 +17,7 @@
       .item_image{
         width: 24vw;
         height: 24vw;
-        background-image: url('../images/items_images/dg.png');
+        background-image: url('../images/items_images/dgdg.png');
         display: flex;
       }
       .text_box{
@@ -43,10 +44,10 @@
       .pic{
         width: 100%;
         height: 35vw;
-        background-image: url('../images/items_images/dgdg../.png');
+        background-image: url('../images/items_images/dgdg.png');
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 110%;
       }
       .price{
         font-family: 'Pragmatica-Italic';
