--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
             </a>
           </div>
           <div class="product_card gradient_h">
-            <a href="#" id="e_2" class="photo">
+            <a href="shop_items/e.html" id="e_2" class="photo">
               <div class="cost">статуэтка «Е»<br>1200р</div>
             </a>
           </div>
@@ -69,7 +69,7 @@
             </a>
           </div>
           <div class="product_card gradient_h">
-            <a href="#" id="e_4" class="photo">
+            <a href="shop_items/o.html" id="e_4" class="photo">
               <div class="cost">статуэтка «О»<br>1200р</div>
             </a>
           </div>
@@ -85,7 +85,7 @@
             </a>
           </div>
           <div class="product_card gradient_h">
-            <a href="#" id="s_2" class="photo">
+            <a href="shop_items/gloves.html" id="s_2" class="photo">
               <div class="cost">хранители 5к в кармане<br>800р</div>
             </a>
           </div>
@@ -101,28 +101,28 @@
         <div class="category_name">аксессуары</div>
         <div class="products">
           <div class="product_card gradient_h">
-            <a href="#"id="a_1" class="photo">
+            <a href="shop_items/tattoo.html"id="a_1" class="photo">
               <div class="cost">временная татуировка<br>680р</div>
             </a>
             <div >
             </div>
           </div>
           <div class="product_card gradient_h">
-            <a href="#"id="a_2" class="photo">
-              <div class="cost">стакачик для кофеы<br>1450р</div>
+            <a href="shop_items/water.html"id="a_2" class="photo">
+              <div class="cost">стакачик для кофе<br>1450р</div>
             </a>
             <div >
             </div>
           </div>
           <div class="product_card gradient_h">
-            <a href="#"id="a_3" class="photo">
+            <a href="shop_items/zont.html"id="a_3" class="photo">
               <div class="cost">зонтик<br>1800р</div>
             </a>
             <div >
             </div>
           </div>
           <div class="product_card gradient_h">
-            <a href="#"id="a_4" class="photo">
+            <a href="shop_items/korobki.html"id="a_4" class="photo">
               <div class="cost">набор для упаковки<br>1500р</div>
             </a>
             <div >
