--- a/shop.html
+++ b/shop.html
@@ -80,7 +80,7 @@
         <div class="category_name">одежда</div>
         <div class="products">
           <div class="product_card gradient_h">
-            <a href="#" id="s_1" class="photo">
+            <a href="shop_items/rubashka.html" id="s_1" class="photo">
               <div class="cost">рубашка oversize<br>3000р</div>
             </a>
           </div>
