--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
+.bg{
+  width: 70%;
+  height: 70%;
+  background-color: white;
+  position: relative;
+  margin: auto;
+}
+.green{
+  background-color: #E0E2D0;
+}
+
+/* .news:hover{
+  background: radial-gradient(circle, rgba(255,255,255,0) 63%, rgba(0,255,25,1) 100%);
+  transition: .3s all ease;
+} */
+
 
     </style>
   </head>
@@ -12,7 +28,7 @@
     <nav>
         <a id="s1" href="index.html"></a>
         <a  id="s2" href="visiting.html">посещение</a>
-        <a id="s3"  href="afisha.html">афиша</a>
+        <a id="s3"  href="afisha.html">подарочки</a>
         <a id="s4"  href="events.html">события</a>
         <a id="s5"  href="shop.html">магазин</a>
         <a id="s6"  href="museum_info.html">о музее</a>
@@ -22,13 +38,16 @@
         <h5>о музее</h5>
         <p>Impress* — первый музей шрифтовых иллюзий, спроектированный под руководством дизайнеров. </p>
       </div>
-      <div class="news event">
-        <h5>subdiv\<br>\sculpt</h5>
-        <a class="mini_link" href="">выставка</a>
+      <div class="news event green">
+        <div class="bg">
+          <h5>subdiv\<br>\sculpt</h5>
+          <a class="mini_link" href="">выставка</a>
+        </div>
+
       </div>
       <div class="news fest">
         <h5>летний фестиваль «поле зрения»</h5>
-        <a class="mini_link" href="">билеты</a>
+        <a class="mini_link" href="event_items/pole_z.html">билеты</a>
       </div>
       <div class="wallpaper">
         <a class="mini_link" href="">обои</a>
