--- a/museum_info.html
+++ b/museum_info.html
@@ -78,9 +78,11 @@
         <a id="s5"  href="shop.html">магазин</a>
         <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
+    /префиксы backdrop-filter
+
     <main>
-      <div class="box">
-        <a  class="book" href="https://www.calameo.com/read/00665320613bb4b4b2ceb"></a>
+      <div class="box book">
+        <a  class="" href="https://www.calameo.com/read/00665320613bb4b4b2ceb"></a>
       </div>
       <div class="box">
           <a class="build" href="build_info.html"></a>
