--- a/try/menubar.html
+++ b/try/menubar.html
@@ -89,5 +89,10 @@
         <a id="s6"  href="museum_info.html">о музее</a>
         <div class="icon"><span></span></div>
     </nav>
+    <main>
+      <div class="cursor">
+
+      </div>
+    </main>
   </body>
 </html>
