--- a/try/pop_up.html
+++ b/try/pop_up.html
@@ -57,15 +57,26 @@
       /* .burg{ display: none} */
     </style>
     <script type="text/javascript">
-      $(document).ready(function(){
-        $(".burg").click(function(){
-          $(this).addClass("hidden");
-          setTimeOut(function(){
-            $(".burg").addClass("block"),
-            100})
-            $("nav a").addClass("d_grid")
-        })
-      })
+        $(document).ready(function(){
+          $("nav .burg").click(function(){
+            
+          })
+
+        });
+
+
+
+
+
+      // $(document).ready(function(){
+      //   $(".burg").click(function(){
+      //     $(this).addClass("hidden");
+      //     setTimeOut(function(){
+      //       $(".burg").addClass("block"),
+      //       100})
+      //       $("nav a").addClass("d_grid")
+      //   })
+      // })
     </script>
   </head>
   <body>
