--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <style media="screen">
 .bg{
   width: 70%;
@@ -22,7 +24,9 @@
 } */
 
 
-
+.menu-non-active{
+  display:none;
+}
 
 @media only screen and (max-width: 768px) {
   /* telefon4ik */
@@ -40,6 +44,7 @@ nav{
 #s2, #s3, #s4, #s5, #s6 {
   display: none;
 }
+
 
 @media only screen and (max-width: 768px) {
   /* telefon4ik */
@@ -75,6 +80,52 @@ nav{
     grid-area: 4/1/5/3;
     overflow: hidden;
   }
+  #s2, #s3, #s4, #s5, #s6{
+    display: block;
+    width: 50vw;
+    height: 25vh;
+
+  }
+  #s2{ grid-area:2/1/3/2; }
+  #s3{ grid-area:2/2/3/3; }
+  #s4{ grid-area:3/1/4/2; }
+  #s5{ grid-area:3/2/4/3; }
+  #s6{ grid-area:4/1/5/2; }
+  nav{
+    width: 100vw;
+  height: 100vh;
+    transition: all .4s ease;
+    display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 25vh 25vh 25vh 25vh;
+  }
+  .menu-non-active{
+        grid-template-columns: 1fr 1fr;
+        transition: all .4s ease;
+
+  }
+  .menu-non-active #s1{
+    grid-area: 1/1/2/2;
+  }
+  .menu-non-active .icon-close{
+    grid-area: 1/2/2/3;
+  }
+
+  .fade{
+    display: none;
+  }
+  .hidden{
+    opacity: 0;
+  }
+  .icon-more,.icon-close{
+    width: 50vw;
+    height: 144px;
+    background-color: blue;
+    display: grid;
+    grid-area:1/2/2/3;
+
+}
+
 }
 
 
@@ -83,10 +134,37 @@ nav{
 
 
     </style>
+    <script type="text/javascript">
+    $(document).ready(function(){
+        $(".icon-close").click(function(){
+          // $(".menu-items").addClass("fade")
+          $(this).parent().addClass("hidden")
+          setTimeout(function(){
+            $("nav, .menu-non-active").toggleClass("fade");
+          },500);
+          setTimeout(function(){
+            if($("nav").hasClass("fade")){
+              $(".menu-non-active").removeClass("hidden");
+            } else {
+              $("nav").removeClass("hidden");
+            }
+            // $("menu-non-active").removeClass("fade");
+          },600);
+        })
+
+
+
+    });
+    </script>
   </head>
   <body>
+    <div class="menu-non-active">
+      <a id="s1"href="#"></a>
+      <a href="#" class="icon-close"></a>
+    </div>
     <nav>
         <a id="s1" href="index.html"></a>
+        <a href="#" class="icon-close"></a>
         <a  id="s2" href="visiting.html">посещение</a>
         <a id="s3"  href="afisha.html">подарочки</a>
         <a id="s4"  href="events.html">события</a>
