--- a/try/menu.html
+++ b/try/menu.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="../stylesheets/style.css">
     <style media="screen">
     .fade{
-      opacity: 0;
+      display: none;
     }
     .hidden{
-      display: none;
+      opacity: 0;
+
     }
     .icon-more,.icon-close{
       width: 50vw;
@@ -57,15 +58,15 @@
       $(document).ready(function(){
           $(" .icon-close").click(function(){
             // $(".menu-items").addClass("fade")
-            $(this).parent().addClass("fade")
+            $(this).parent().addClass("hidden")
             setTimeout(function(){
-              $(".menu-items, .menu-non-active").toggleClass("hidden");
+              $(".menu-items, .menu-non-active").toggleClass("fade");
             },500);
             setTimeout(function(){
-              if($(".menu-items").hasClass("hidden")){
-                $(".menu-non-active").removeClass("fade");
+              if($(".menu-items").hasClass("fade")){
+                $(".menu-non-active").removeClass("hidden");
               } else {
-                $(".menu-items").removeClass("fade");
+                $(".menu-items").removeClass("hidden");
               }
               // $("menu-non-active").removeClass("fade");
             },600);
