--- a/index.html
+++ b/index.html
@@ -134,7 +134,15 @@
 .fade{
   display: none;
 }
-
+footer {
+  justif
+  height: 100vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, 1fr);
+}
+footer .mail {
+  grid-area: 1/1/2/2;
+}
 
 }
 
