--- a/visiting.html
+++ b/visiting.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
 
+      .render_box{
+        width: 
+      }
     </style>
     <script type="text/javascript">
 
@@ -22,6 +25,14 @@
     </nav>
 
     <main>
+<div class="">
+
+</div>
+
+
+
+
+
 
     </main>
     <footer>
