--- a/index.html
+++ b/index.html
@@ -185,6 +185,22 @@ footer .mail {
     </script>
   </head>
   <body>
+    <div class="member_popup">
+      <div class="gif_box">
+        <img src="foo.gif" alt="This is an animated gif image, but it does not move"/>
+        <p>Присоединяйся к Impress News и получи бесплатный доступ к лекциям от мемологов.</p>
+      </div>
+      <input type="text" name="name" value="" placeholder="имя">
+      <input type="email" name="email" value="" placeholder="email">
+      <button type="button" name="prisoedin"></button>
+
+
+    </div>
+
+
+
+
+
     <div class="menu-non-active">
       <a id="s1"href="#"></a>
       <a href="#" class="icon-close"></a>
